--- a/step_2_all_models_from_brands.ipynb
+++ b/step_2_all_models_from_brands.ipynb
@@ -26,7 +26,7 @@
         "import pandas as pd\n",
         "\n",
         "INPUT_FILE = 'brand_names.csv'\n",
-        "OUTPUT_FILE = \"all_model_variants.csv\"\n",
+        "OUTPUT_FILE = \"all_models.csv\"\n",
         "\n",
         "brands_df = pd.read_csv(INPUT_FILE)\n",
         "\n",
