--- a/step_5_download_images.ipynb
+++ b/step_5_download_images.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNDy1bsPULDTnAQoQvgj+xS",
+      "authorship_tag": "ABX9TyMql6H74jOHZc8Z5t/zk8SD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -136,13 +136,14 @@
         "        \n",
         "        if not url:\n",
         "            continue\n",
-        "        if counter >= MAX_IMAGES:  # Set how many images to download per each model.\n",
+        "        if counter >= MAX_IMAGES:\n",
         "            break\n",
+        "        if len(os.listdir(directory)) >= MAX_IMAGES:\n",
+        "            continue\n",
         "\n",
         "        # Get filename from URL\n",
         "        filename = os.path.basename(urllib.parse.urlsplit(url).path)\n",
-        "        if len(os.listdir(directory)) >= MAX_IMAGES:\n",
-        "          continue\n",
+        "        \n",
         "\n",
         "        # If file exists then skip it\n",
         "        if os.path.exists(os.path.join(directory, filename)):\n",
